# oven-temp-rs

./: .gitignore  Cargo.toml  README.md  memory.x  openocd.cfg
.cargo/: config
.github/workflows/: rust.yml
docs/: README.md  _config.yml  oven_temp_rs_measurement_888_8f.numbers  schematic.fzz  sleeping_timer.numbers  sleeping_timer_rtc.numbers
docs/_layouts/: default.html
src/: __ssd1306.rs  battery.rs  ht16k33.rs  lib.rs  main.rs  oventemp.rs  usbserial.rs
