[package]
authors = ["Tyler Holmes <tyler@holmesengineering.com>"]
edition = "2018"
name = "oven-temp-rs"
version = "0.1.0"
description = "Oven temperature monitor and display for dumb ovens that don't have digital temp readout. Implemented in embedded rust."
repository = "https://github.com/TDHolmes/oven-temp-rs"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["feather_m0", "embedded", "thermocouple", "AD8495", "HT16K33"]
categories = ["No standard library"]

[dependencies]
feather_m0 = {features = ["unproven"], git = "https://github.com/atsamd-rs/atsamd"}
embedded-hal = "0.2"
cortex-m = "0.6.4"
cortex-m-rt = "0.6"  # for interrupts
panic-semihosting = {version = "0.5"}

# dependencies for usb serial printing
usb-device = {version = "0.2", optional = true}
usbd-serial = {version = "0.1", optional = true}
heapless = {version = "0.5", optional = true}
ufmt = {version = "0.1", optional = true}
ufmt-utils = {version = "0.1", optional = true}

[features]
# By default, use our sleeping delay for power savings
default = ["sleeping-delay"]
# Use our SleepingDelay object for delaying between samples
sleeping-delay = []
# usbserial feature doesn't depend on any others
usbserial = ["heapless", "ufmt", "ufmt-utils", "usb-device", "usbd-serial", "feather_m0/usb"]

# this lets you use `cargo fix`!
[[bin]]
name = "oven-temp-rs"
test = false
bench = false

[profile.release]
codegen-units = 1   # better optimizations
debug = true        # symbols are nice and they don't increase the size on Flash
lto = true          # better optimizations
opt-level = "s"
